--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- CSS Link -->
     <link rel="stylesheet" href="styles/styles.css">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/WhatsApp Image 2020-04-28 at 2.56.30 PM.jpeg" type="image/x-icon">
+
     <title>My apology to you love</title>
 </head>
 <body>
