Updated image of favicon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="images/WhatsApp Image 2020-04-28 at 2.56.30 PM.jpeg" >
+    <link rel="icon" type="image/x-icon" href="images/baibyyyy.jpg" >
 
     <title>My apology to you love</title>
 </head>
