Added love emoji to the html title section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/baibyyyy.jpg" >
 
-    <title>My apology to you love</title>
+    <title>My apology to you love❤️</title>
 </head>
 <body>
     <main>
